Make headers translatable

BUG: 416711
FIXED-IN: 5.0.9